--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -37,13 +37,16 @@ description:
     <div class="posts" id="news">
         <div class="post-teaser">
                 <header>
-                <h2>Your premiere band</h2>
+                <h2>Charleston's Unofficial Taylor Swift Tribute Band</h2>
                 </header>
             <div class="excerpt">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Let us host the event of your wildest dreams!
+                We play all of your Taylor Swift favorites of any era.<br><br>
+                Our performances can cater to all ages and types of audiences, not always just those feelin' 22. Book us for your wedding, brewery, birthday party, or other event.<br><br>
+                Ready to make your event enchanted with the music of Taylor Switft? Contact us and we'll be ready to show up at your party!</p>
+            </div>
+            <div class="button-container">
+                <a href="mailto:email@gmail.com" class="button-inverse">Book Us</a>
             </div>
         </div>  
     </div>
@@ -51,7 +54,9 @@ description:
     <div class="banner">
         <h3>Contact us</h3>
         <p>We would love to play your venue, event, or party!</p>
-        <p>Email us at email@gmail.com for more information.</p>
+        <p>Email us at <a href="mailto:email@gmail.com">email@gmail.com</a> for more information.
+</p>
+
     </div>
 
     {% comment %}
