Fix typos in event description text

--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -42,8 +42,8 @@ description:
             <div class="excerpt">
                 <p>Let us host the event of your wildest dreams!
                 We play all of your Taylor Swift favorites of any era.<br><br>
-                Our performances can cater to all ages and types of audiences, not always just those feelin' 22. Book us for your wedding, brewery, birthday party, or other event.<br><br>
-                Ready to make your event enchanted with the music of Taylor Switft? Contact us and we'll be ready to show up at your party!</p>
+                Our performances can cater to all ages and types of audiences, not just those feelin' 22. Book us for your wedding, brewery, birthday party, or other event.<br><br>
+                Ready to make your event enchanted with the music of Taylor Swift? Contact us and we'll be ready to show up at your party!</p>
             </div>
             <div class="button-container">
                 <a href="mailto:email@gmail.com" class="button-inverse">Book Us</a>
