--- a/_includes/shows.liquid
+++ b/_includes/shows.liquid
@@ -9,7 +9,7 @@
         {% if show.tickets %}
           <p>
             <a class="button-inverse" href="{{ show.tickets }}" target="_blank" rel="noopener noreferrer">
-            Buy Tickets
+            Tickets
           </a>
           </p>
         {% endif %}
