--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -29,7 +29,7 @@ description:
     <div class="posts">
         <div class="post-teaser">
             <div class="button-container">
-                <a href="shows" class="button-inverse">Buy Tickets</a>
+                <a href="shows" class="button-inverse">Catch a Show</a>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@ description:
                 Ready to make your event enchanted with the music of Taylor Swift? Contact us and we'll be ready to show up at your party!</p>
             </div>
             <div class="button-container">
-                <a href="mailto:email@gmail.com" class="button-inverse">Book Us</a>
+                <a href="mailto:wildestdreamstribute@gmail.com" class="button-inverse">Book Us</a>
             </div>
         </div>  
     </div>
@@ -54,7 +54,7 @@ description:
     <div class="banner">
         <h3>Contact us</h3>
         <p>We would love to play your venue, event, or party!</p>
-        <p>Email us at <a href="mailto:email@gmail.com">email@gmail.com</a> for more information.
+        <p>Email us at <a href="mailto:wildestdreamstribute@gmail.com">wildestdreamstribute@gmail.com</a> for more information.
 </p>
 
     </div>
