--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,9 +1,7 @@
 <style>
 /* force scrollbar */
 html { overflow-y: scroll; }
-
-/* To overwrite page's padding, to get bigger images */
-/* article {padding:2%;} */
+article {padding:2%;} 
 </style>
 
 <div id='masonry' class="grid">
