--- a/_includes/social/icons.liquid
+++ b/_includes/social/icons.liquid
@@ -3,7 +3,7 @@
     <li>
         <a href="https://www.facebook.com/"
            title="Follow us on Facebook" 
-           target="_blank" 
+           target="https://www.facebook.com/61577988302932" 
            rel="noopener">
             <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
@@ -11,7 +11,7 @@
             </span>
         </a>
     </li>
-    <!-- Instagram Icon -->
+    <!-- Instagram Icon 
     <li>
         <a href="https://www.instagram.com/" 
            title="Follow us on Instagram" 
@@ -22,6 +22,6 @@
                 <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
             </span>
         </a>
-    </li>
+    </li>-->
 </ul>
 
