--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -29,7 +29,7 @@ description:
     <div class="posts">
         <div class="post-teaser">
             <div class="button-container">
-                <a href="shows" class="button-inverse">Catch a Show</a>
+                <a href="shows" class="button-inverse">Tickets</a>
             </div>
         </div>
     </div>
