--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -29,7 +29,7 @@ description:
     <div class="posts">
         <div class="post-teaser">
             <div class="button-container">
-                <a href="shows" class="button-inverse">Tickets</a>
+                <a href="shows" class="button-inverse">Upcoming Shows</a>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@ description:
                 Ready to make your event enchanted with the music of Taylor Swift? Contact us and we'll be ready to show up at your party!</p>
             </div>
             <div class="button-container">
-                <a href="mailto:wildestdreamstribute@gmail.com" class="button-inverse">Book Us</a>
+                <a href="contact" class="button-inverse">Book Us</a>
             </div>
         </div>  
     </div>
