--- a/_includes/upcoming-game.liquid
+++ b/_includes/upcoming-game.liquid
@@ -20,7 +20,7 @@
         <p>{{ next_show.location }}</p>
         {% if next_show.tickets %}
         <div class="button-container" id="home-ticket-button">
-          <a href="{{ next_show.tickets }}" class="button">Tickets</a>
+          <a href="{{ next_show.tickets }}" class="button">Info</a>
         </div>
         {% endif %}
       </li>
