Social icons updates

--- a/_includes/default/footer.liquid
+++ b/_includes/default/footer.liquid
@@ -7,7 +7,7 @@
     </div>
     <p class="text" id="footer-text">
         <br>
-        {{ site.footer_text | default: "Created by <a href='https:hana.gallery'>Hana Donnelly</a> with <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a>" }}</p>
+        {{ site.footer_text | default: "Created by Hana Donnelly with <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a>" }}</p>
     <!--{% if site.mermaid %}
         <script type="module">
           mermaid.initialize({ startOnLoad: false, theme: "default" });
